fixing spacing issue on hero text

--- a/home-styles.css
+++ b/home-styles.css
@@ -19,18 +19,18 @@
     height: 600px;
     color: #FEFCF7;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     border-radius: 0.625rem;
 }
 .hero .hero-copy {
     padding: clamp(6.25em, 2vw + 1rem, 7.25em)clamp(1.5rem, 2vw + 1rem, 5.3em);
-    grid-area: 1 / 1 / 2 / 3;
+    /* grid-area: 1 / 1 / 2 / 3; */
     align-self: center;
 }
 .hero h1 {
     font-family: 'Fraunces', sans-serif;
     font-weight: bold;
-    font-size: clamp(2.5em, 2vw + 1rem, 4.5em);
+    font-size: clamp(2.5em, 5vw + 1rem, 4.5em);
     line-height: clamp(2.5rem, 2vw + 1rem, 4.5rem);
     margin-bottom: 2rem;
 }
